hledger/test/errors/csvdateparse.csv.rules
skip 2
date %1
date-format %Y-%m-%d
